// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleTask matches snapshot 1`] = `
<div>
  <article
    class="sc-fzpans gHCdfm"
  >
    <div
      class="sc-fzplWN gwxuzL"
    >
      <div>
        <div
          class="sc-fzplWN gwxuzL"
        >
          <h5
            class="sc-fznyAO drGMcz"
          >
            Ir às compras
          </h5>
          <h6
            class="sc-fznZeY cjOYaZ"
            color="#673AB7"
          >
            Waiting for
          </h6>
        </div>
        <p
          class="sc-fznKkj ihavmM"
        >
          20 Jul
        </p>
      </div>
      <div
        class="sc-fzokOt emMCxO"
      />
    </div>
  </article>
</div>
`;

exports[`Tasks Page matches snapshot 1`] = `
<div>
  <div
    class="sc-fzqBZW aFvVh"
  >
    <h1
      class="sc-fzqNJr gBBheN"
    >
      Tasks
    </h1>
    <div
      class="sc-fzoyAV caZJLz"
    >
      <div
        class="sc-fzoLag bkLbgZ"
      >
        <div
          class="sc-fzoXzr izPQNH"
        >
          Today
          <svg>
            chevron.svg
          </svg>
        </div>
        <h3
          class="sc-fzpjYC iaMLia"
        >
          7
        </h3>
      </div>
      <div
        class="sc-fznxsB iNwomV"
      >
        <svg
          class="settings-icon"
        >
          settings.svg
        </svg>
        <div
          class="sc-AxjAm khxSQh"
        >
          <h2
            class="sc-AxiKw jzoYkp"
          >
            Settings
          </h2>
          <div
            class="sc-AxhCb iGvJwE"
          >
            <div
              class="sc-AxhUy gnZxSn"
            >
              <label
                class="sc-AxgMl fHkhzP"
                for="sort-by"
              >
                Sort by
              </label>
              <div
                class="sc-AxheI hCWMTo"
              >
                <div
                  class="MuiInputBase-root MuiInput-root"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="sort-by"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                    id="sort-by"
                    role="button"
                    tabindex="0"
                  >
                    Date
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    tabindex="-1"
                    value="date"
                  />
                  <svg
                    class="MuiSelect-icon"
                  >
                    chevron.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="sc-AxhUy gnZxSn"
            >
              <label
                class="sc-AxgMl fHkhzP"
                for="font-size"
              >
                Font size
              </label>
              <div
                class="sc-AxheI hCWMTo"
              >
                <div
                  class="MuiInputBase-root MuiInput-root"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="font-size"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                    id="font-size"
                    role="button"
                    tabindex="0"
                  >
                    Medium
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    tabindex="-1"
                    value="medium"
                  />
                  <svg
                    class="MuiSelect-icon"
                  >
                    chevron.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="sc-AxhUy gnZxSn"
            >
              <label
                class="sc-AxgMl fHkhzP"
              >
                Categories
              </label>
              <div
                class="sc-AxmLO ceYEas"
              >
                <p
                  class="sc-fzozJi ihgPmv"
                  color="#673AB7"
                >
                  Waiting for
                </p>
                <p
                  class="sc-fzozJi gqjDvs"
                  color="#FFC107"
                >
                  House
                </p>
                <p
                  class="sc-fzozJi fKpEFM"
                  color="#FF9800"
                >
                  Trackit
                </p>
                <p
                  class="sc-fzozJi dNhvgN"
                  color="#9E9E9E"
                >
                  Stuff
                </p>
                <p
                  class="sc-fzozJi tItWo"
                  color="#E91E63"
                >
                  Personal
                </p>
                <span
                  class="sc-fzoLsD bpeBKU"
                >
                  <svg>
                    plus.svg
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-AxirZ gpexXZ"
        />
      </div>
    </div>
    <section
      class="sc-fznJRM cBIMGX"
    >
      <article
        class="sc-fzpans gHCdfm"
      >
        <div
          class="sc-fzplWN gwxuzL"
        >
          <div>
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Ir às compras
              </h5>
              <h6
                class="sc-fznZeY cjOYaZ"
                color="#673AB7"
              >
                Waiting for
              </h6>
            </div>
            <p
              class="sc-fznKkj ihavmM"
            >
              20 Jul
            </p>
          </div>
          <div
            class="sc-fzokOt emMCxO"
          />
        </div>
      </article>
      <article
        class="sc-fzpans gHCdfm"
      >
        <div
          class="sc-fzplWN gwxuzL"
        >
          <div>
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Dar de comer às gatas
              </h5>
              <h6
                class="sc-fznZeY ekLkIy"
                color="#FFC107"
              >
                House
              </h6>
            </div>
            <p
              class="sc-fznKkj ihavmM"
            >
              3 Aug
            </p>
          </div>
          <div
            class="sc-fzokOt emMCxO"
          />
        </div>
      </article>
      <article
        class="sc-fzpans gHCdfm"
      >
        <div
          class="sc-fzplWN gwxuzL"
        >
          <div>
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Entregar trabalho
              </h5>
            </div>
            <p
              class="sc-fznKkj ihavmM"
            >
              4 Aug
            </p>
          </div>
          <div
            class="sc-fzokOt emMCxO"
          />
        </div>
      </article>
      <article
        class="sc-fzpans gHCdfm"
      >
        <div
          class="sc-fzplWN gwxuzL"
        >
          <div>
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Fazer wireframe da App
              </h5>
              <h6
                class="sc-fznZeY gooBaK"
                color="#FF9800"
              >
                Trackit
              </h6>
            </div>
            <p
              class="sc-fznKkj ihavmM"
            >
              5 Aug
            </p>
          </div>
          <div
            class="sc-fzokOt emMCxO"
          />
        </div>
      </article>
      <article
        class="sc-fzpans gHCdfm"
      >
        <div
          class="sc-fzplWN gwxuzL"
        >
          <div>
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Fazer design da App
              </h5>
              <h6
                class="sc-fznZeY gooBaK"
                color="#FF9800"
              >
                Trackit
              </h6>
            </div>
            <p
              class="sc-fznKkj ihavmM"
            >
              6 Aug
            </p>
          </div>
          <div
            class="sc-fzokOt emMCxO"
          />
        </div>
      </article>
      <article
        class="sc-fzpans gHCdfm"
      >
        <div
          class="sc-fzplWN gwxuzL"
        >
          <div>
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Estudar React
              </h5>
            </div>
            <p
              class="sc-fznKkj ihavmM"
            >
              7 Aug
            </p>
          </div>
          <div
            class="sc-fzokOt emMCxO"
          />
        </div>
      </article>
      <article
        class="sc-fzpans gHCdfm"
      >
        <div
          class="sc-fzplWN gwxuzL"
        >
          <div>
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Esta não devia aparecer
              </h5>
            </div>
            <p
              class="sc-fznKkj ihavmM"
            >
              8 Aug
            </p>
          </div>
          <div
            class="sc-fzokOt emMCxO"
          />
        </div>
      </article>
    </section>
  </div>
</div>
`;

exports[`TasksSettings matches snashot 1`] = `
<div>
  <svg
    class="settings-icon"
  >
    settings.svg
  </svg>
  <div
    class="sc-AxjAm khxSQh"
  >
    <h2
      class="sc-AxiKw jzoYkp"
    >
      Settings
    </h2>
    <div
      class="sc-AxhCb iGvJwE"
    >
      <div
        class="sc-AxhUy gnZxSn"
      >
        <label
          class="sc-AxgMl fHkhzP"
          for="sort-by"
        >
          Sort by
        </label>
        <div
          class="sc-AxheI hCWMTo"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="sort-by"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="sort-by"
              role="button"
              tabindex="0"
            >
              Date
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="date"
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-AxhUy gnZxSn"
      >
        <label
          class="sc-AxgMl fHkhzP"
          for="font-size"
        >
          Font size
        </label>
        <div
          class="sc-AxheI hCWMTo"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="font-size"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="font-size"
              role="button"
              tabindex="0"
            >
              Medium
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="medium"
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-AxhUy gnZxSn"
      >
        <label
          class="sc-AxgMl fHkhzP"
        >
          Categories
        </label>
        <div
          class="sc-AxmLO ceYEas"
        >
          <span
            class="sc-fzoLsD bpeBKU"
          >
            <svg>
              plus.svg
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-AxirZ gpexXZ"
  />
</div>
`;
